gac_sb/objects/Note_De_Frais__c.object
<CustomObject>
    <fields>
        <fullName>Compte__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>uniquement pour les nNote de frais détail non attachée à un évènement</description>
        <label>Compte</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Details_note_de_frais</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contrat__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contrat</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Notes de frais</relationshipLabel>
        <relationshipName>Notes_de_frais</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Des_Frais__c</fullName>
        <label>Date des frais</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Departement__c</fullName>
        <label>Département</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 - Ain</fullName>
                </value>
                <value>
                    <fullName>2 - Aisne</fullName>
                </value>
                <value>
                    <fullName>3 - Allier</fullName>
                </value>
                <value>
                    <fullName>4 - Alpes-de-Haute-Provence</fullName>
                </value>
                <value>
                    <fullName>5 - Hautes-Alpes</fullName>
                </value>
                <value>
                    <fullName>6 - Alpes-Maritimes</fullName>
                </value>
                <value>
                    <fullName>7 - Ardèche</fullName>
                </value>
                <value>
                    <fullName>8 - Ardennes</fullName>
                </value>
                <value>
                    <fullName>9 - Ariège</fullName>
                </value>
                <value>
                    <fullName>10 - Aube</fullName>
                </value>
                <value>
                    <fullName>11 - Aude</fullName>
                </value>
                <value>
                    <fullName>12 - Aveyron</fullName>
                </value>
                <value>
                    <fullName>13 - Bouches-du-Rhône</fullName>
                </value>
                <value>
                    <fullName>14 - Calvados</fullName>
                </value>
                <value>
                    <fullName>15 - Cantal</fullName>
                </value>
                <value>
                    <fullName>16 - Charente</fullName>
                </value>
                <value>
                    <fullName>17 - Charente-Maritime</fullName>
                </value>
                <value>
                    <fullName>18 - Cher</fullName>
                </value>
                <value>
                    <fullName>19 - Corrèze</fullName>
                </value>
                <value>
                    <fullName>2A - Corse-du-sud</fullName>
                </value>
                <value>
                    <fullName>2B - Haute-Corse</fullName>
                </value>
                <value>
                    <fullName>21 - Côte-d’Or</fullName>
                </value>
                <value>
                    <fullName>22 - Côtes-du-Nord</fullName>
                </value>
                <value>
                    <fullName>23 - Creuse</fullName>
                </value>
                <value>
                    <fullName>24 - Dordogne</fullName>
                </value>
                <value>
                    <fullName>25 - Doubs</fullName>
                </value>
                <value>
                    <fullName>26 - Drôme</fullName>
                </value>
                <value>
                    <fullName>27 - Eure</fullName>
                </value>
                <value>
                    <fullName>28 - Eure-et-Loir</fullName>
                </value>
                <value>
                    <fullName>29 - Finistère</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>help description</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Evenement_Id__c</fullName>
        <description>pas de lookup possible vers un évenement pour le moment</description>
        <label>Evenement Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mission_CIR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mission CIR</label>
        <referenceTo>AppCIRmission__c</referenceTo>
        <relationshipLabel>Notes de frais</relationshipLabel>
        <relationshipName>Notes_de_frais</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mission__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mission</label>
        <referenceTo>Mission__c</referenceTo>
        <relationshipLabel>Notes de frais</relationshipLabel>
        <relationshipName>Notes_de_frais</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Nombre_De_Dejeuners__c</fullName>
        <label>Nombre de déjeuners</label>
        <summaryFilterItems>
            <field>Note_De_Frais_Depense__c.Nature_Depense_Categorie__c</field>
            <operation>equals</operation>
            <value>Déjeuner,Invitation client</value>
        </summaryFilterItems>
        <summaryForeignKey>Note_De_Frais_Depense__c.Note_De_Frais__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Nombre_De_Depenses__c</fullName>
        <label>Nombre de dépenses</label>
        <summaryForeignKey>Note_De_Frais_Depense__c.Note_De_Frais__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Objet_attache_libelle__c</fullName>
        <formula>if( Mission__c != null,
Mission__r.Name,
IF(Opportunite__c != null,
Opportunite__r.Name,
IF(Contrat__c != null,
  Contrat__r.ContractNumber  ,
IF(Mission_CIR__c != null,
Mission_CIR__r.Name,
IF(Compte__c != null,
Compte__r.Name,
&apos;&apos;)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Objet attaché (libellé)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Objet_attache_type__c</fullName>
        <formula>if( Mission__c != null, 
&apos;Mission&apos;, 
IF(Opportunite__c != null, 
&apos;Opportunité&apos;, 
IF(Contrat__c != null, 
&apos;Contrat&apos;, 
IF(Mission_CIR__c != null, 
&apos;Mission InnoAdvance&apos;, 
IF(Compte__c != null, 
&apos;Compte&apos;, 
&apos;&apos;)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Objet attaché (type)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunite__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunité</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Notes de frais</relationshipLabel>
        <relationshipName>Notes_de_frais</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pays__c</fullName>
        <label>Pays</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FR</fullName>
                </value>
                <value>
                    <fullName>BR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recap_Note_De_Frais__c</fullName>
        <label>Récap notes de frais</label>
        <referenceTo>Note_De_Frais_Recap__c</referenceTo>
        <relationshipLabel>Notes de frais</relationshipLabel>
        <relationshipName>Details_note_de_frais</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Total_Autres_HT__c</fullName>
        <label>Total autres (TVA récupérable)</label>
        <summarizedField>Note_De_Frais_Depense__c.Montant_HT__c</summarizedField>
        <summaryFilterItems>
            <field>Note_De_Frais_Depense__c.Nature_Depense_Categorie__c</field>
            <operation>equals</operation>
            <value>Autres (TVA récupérable)</value>
        </summaryFilterItems>
        <summaryForeignKey>Note_De_Frais_Depense__c.Note_De_Frais__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Autres_TTC__c</fullName>
        <label>Total autres (TVA non récupérable)</label>
        <summarizedField>Note_De_Frais_Depense__c.Montant_TTC__c</summarizedField>
        <summaryFilterItems>
            <field>Note_De_Frais_Depense__c.Nature_Depense_Categorie__c</field>
            <operation>equals</operation>
            <value>Autres (TVA non récupérable)</value>
        </summaryFilterItems>
        <summaryForeignKey>Note_De_Frais_Depense__c.Note_De_Frais__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Avion__c</fullName>
        <label>Total avion</label>
        <summarizedField>Note_De_Frais_Depense__c.Montant_TTC__c</summarizedField>
        <summaryFilterItems>
            <field>Note_De_Frais_Depense__c.Nature_Depense_Categorie__c</field>
            <operation>equals</operation>
            <value>Avion</value>
        </summaryFilterItems>
        <summaryForeignKey>Note_De_Frais_Depense__c.Note_De_Frais__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Carburant__c</fullName>
        <label>Total carburant</label>
        <summarizedField>Note_De_Frais_Depense__c.Montant_TTC__c</summarizedField>
        <summaryFilterItems>
            <field>Note_De_Frais_Depense__c.Nature_Depense_Categorie__c</field>
            <operation>equals</operation>
            <value>Carburant</value>
        </summaryFilterItems>
        <summaryForeignKey>Note_De_Frais_Depense__c.Note_De_Frais__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Dejeuner__c</fullName>
        <label>Total déjeuner</label>
        <summarizedField>Note_De_Frais_Depense__c.TotalCharges__c</summarizedField>
        <summaryFilterItems>
            <field>Note_De_Frais_Depense__c.Nature_Depense_Categorie__c</field>
            <operation>equals</operation>
            <value>Déjeuner</value>
        </summaryFilterItems>
        <summaryForeignKey>Note_De_Frais_Depense__c.Note_De_Frais__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Diner__c</fullName>
        <label>Total dîner</label>
        <summarizedField>Note_De_Frais_Depense__c.TotalCharges__c</summarizedField>
        <summaryFilterItems>
            <field>Note_De_Frais_Depense__c.Nature_Depense_Categorie__c</field>
            <operation>equals</operation>
            <value>Dîner</value>
        </summaryFilterItems>
        <summaryForeignKey>Note_De_Frais_Depense__c.Note_De_Frais__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Frais_Kilometrique__c</fullName>
        <label>Total frais kilométriques</label>
        <summarizedField>Note_De_Frais_Depense__c.Total__c</summarizedField>
        <summaryFilterItems>
            <field>Note_De_Frais_Depense__c.Nature_Depense_Categorie__c</field>
            <operation>equals</operation>
            <value>Frais kilométrique</value>
        </summaryFilterItems>
        <summaryForeignKey>Note_De_Frais_Depense__c.Note_De_Frais__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_HT__c</fullName>
        <label>Total HT</label>
        <summarizedField>Note_De_Frais_Depense__c.Montant_HT__c</summarizedField>
        <summaryForeignKey>Note_De_Frais_Depense__c.Note_De_Frais__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Hotel_Nuitee__c</fullName>
        <label>Total hotêl (nuitée)</label>
        <summarizedField>Note_De_Frais_Depense__c.Montant_TTC__c</summarizedField>
        <summaryFilterItems>
            <field>Note_De_Frais_Depense__c.Nature_Depense_Categorie__c</field>
            <operation>equals</operation>
            <value>&quot;Hotêl (nuitée)&quot;</value>
        </summaryFilterItems>
        <summaryForeignKey>Note_De_Frais_Depense__c.Note_De_Frais__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Invitation_client__c</fullName>
        <label>Total Invitation client</label>
        <summarizedField>Note_De_Frais_Depense__c.TotalCharges__c</summarizedField>
        <summaryFilterItems>
            <field>Note_De_Frais_Depense__c.Nature_Depense_Categorie__c</field>
            <operation>equals</operation>
            <value>Invitation client</value>
        </summaryFilterItems>
        <summaryForeignKey>Note_De_Frais_Depense__c.Note_De_Frais__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Location_Vehicule__c</fullName>
        <label>Total location véhicule</label>
        <summarizedField>Note_De_Frais_Depense__c.Montant_TTC__c</summarizedField>
        <summaryFilterItems>
            <field>Note_De_Frais_Depense__c.Nature_Depense_Categorie__c</field>
            <operation>equals</operation>
            <value>Location véhicule</value>
        </summaryFilterItems>
        <summaryForeignKey>Note_De_Frais_Depense__c.Note_De_Frais__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Parking__c</fullName>
        <label>Total Parking, métro, bus</label>
        <summarizedField>Note_De_Frais_Depense__c.Montant_TTC__c</summarizedField>
        <summaryFilterItems>
            <field>Note_De_Frais_Depense__c.Nature_Depense_Categorie__c</field>
            <operation>equals</operation>
            <value>Parking / Métro / Bus</value>
        </summaryFilterItems>
        <summaryForeignKey>Note_De_Frais_Depense__c.Note_De_Frais__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Peage_Parking_Metro_Bus__c</fullName>
        <label>Total péage</label>
        <summarizedField>Note_De_Frais_Depense__c.TotalCharges__c</summarizedField>
        <summaryFilterItems>
            <field>Note_De_Frais_Depense__c.Nature_Depense_Categorie__c</field>
            <operation>equals</operation>
            <value>Péage</value>
        </summaryFilterItems>
        <summaryForeignKey>Note_De_Frais_Depense__c.Note_De_Frais__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Petit_Dejeuner__c</fullName>
        <label>Total petit déjeuner</label>
        <summarizedField>Note_De_Frais_Depense__c.TotalCharges__c</summarizedField>
        <summaryFilterItems>
            <field>Note_De_Frais_Depense__c.Nature_Depense_Categorie__c</field>
            <operation>equals</operation>
            <value>Petit Déjeuner</value>
        </summaryFilterItems>
        <summaryForeignKey>Note_De_Frais_Depense__c.Note_De_Frais__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Poste__c</fullName>
        <label>Total poste</label>
        <summarizedField>Note_De_Frais_Depense__c.Montant_TTC__c</summarizedField>
        <summaryFilterItems>
            <field>Note_De_Frais_Depense__c.Nature_Depense_Categorie__c</field>
            <operation>equals</operation>
            <value>Poste</value>
        </summaryFilterItems>
        <summaryForeignKey>Note_De_Frais_Depense__c.Note_De_Frais__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_TTC__c</fullName>
        <label>Total TTC</label>
        <summarizedField>Note_De_Frais_Depense__c.Montant_TTC__c</summarizedField>
        <summaryForeignKey>Note_De_Frais_Depense__c.Note_De_Frais__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_TVA__c</fullName>
        <label>Total TVA</label>
        <summarizedField>Note_De_Frais_Depense__c.Montant_TVA__c</summarizedField>
        <summaryForeignKey>Note_De_Frais_Depense__c.Note_De_Frais__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Taxi__c</fullName>
        <label>Total taxi</label>
        <summarizedField>Note_De_Frais_Depense__c.Total__c</summarizedField>
        <summaryFilterItems>
            <field>Note_De_Frais_Depense__c.Nature_Depense_Categorie__c</field>
            <operation>equals</operation>
            <value>Taxi</value>
        </summaryFilterItems>
        <summaryForeignKey>Note_De_Frais_Depense__c.Note_De_Frais__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Train__c</fullName>
        <label>Total train</label>
        <summarizedField>Note_De_Frais_Depense__c.Total__c</summarizedField>
        <summaryFilterItems>
            <field>Note_De_Frais_Depense__c.Nature_Depense_Categorie__c</field>
            <operation>equals</operation>
            <value>Train</value>
        </summaryFilterItems>
        <summaryForeignKey>Note_De_Frais_Depense__c.Note_De_Frais__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <label>Total note de frais</label>
        <summarizedField>Note_De_Frais_Depense__c.Total__c</summarizedField>
        <summaryForeignKey>Note_De_Frais_Depense__c.Note_De_Frais__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>done__c</fullName>
        <defaultValue>false</defaultValue>
        <label>done</label>
        <type>Checkbox</type>
    </fields>
    <label>Note de frais</label>
    <nameField>
        <displayFormat>NDF-{000000}</displayFormat>
        <label>Num Note De Frais</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Notes de frais</pluralLabel>
    <recordTypes>
        <fullName>Evenement</fullName>
        <active>true</active>
        <label>Evènement</label>
    </recordTypes>
    <recordTypes>
        <fullName>Libre</fullName>
        <active>true</active>
        <label>Libre</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Date_des_frais_obligatoire_pour_RT_libre</fullName>
        <active>true</active>
        <errorConditionFormula>AND(RecordType.DeveloperName = &apos;Libre&apos;, ISNULL(Date_Des_Frais__c ))</errorConditionFormula>
        <errorDisplayField>Date_Des_Frais__c</errorDisplayField>
        <errorMessage>La date des frais est obligatoire</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Une_depense_minimum_obligatoire</fullName>
        <active>true</active>
        <errorConditionFormula>AND(PRIORVALUE( Nombre_De_Depenses__c ) &gt; 0 ,Nombre_De_Depenses__c = 0)</errorConditionFormula>
        <errorMessage>Il doit y avoir au minimum une dépense</errorMessage>
    </validationRules>
</CustomObject>